--- a/fish/index.html
+++ b/fish/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello!</title>
+	<title>Try</title>
 </head>
 <body>
-<h1>Hi!</h1>
+<h1>Hello!</h1>
+<h2>Hi! My name is Fish!</h2>>
 </body>
 </html>
